build: nodejs should >= 20

--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   "maintainers": [
     "Riceball LEE <snowyu.lee@gmail.com>"
   ],
+  "engines": {
+    "node": ">=20.11.1"
+  },
   "packageManager": "pnpm@7.27.1",
   "types": "./dist/index.d.ts"
 }
