--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "dependencies": {
     "@isdk/ai-tool": "workspace:*",
-    "ai": "^3.0.13",
-    "vitest-fetch-mock": "^0.2.2"
+    "ai": "^3.0.13"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.0",
@@ -42,6 +41,7 @@
     "typescript": "^5.4.2",
     "vite": "^5.1.5",
     "vitest": "^1.3.1",
+    "vitest-fetch-mock": "^0.2.2",
     "zod": "^3.22.4"
   },
   "files": [
