refactor: extract the isModelNameMatched to ai-tool package

--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
   "engines": {
     "node": ">=20.11.1"
   },
-  "packageManager": "pnpm@7.27.1",
+  "packageManager": "pnpm@9.0.5+sha256.61bd66913b52012107ec25a6ee4d6a161021ab99e04f6acee3aa50d0e34b4af9",
   "types": "./dist/index.d.ts"
 }
