--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "dependencies": {
     "@isdk/ai-tool": "workspace:*",
-    "@isdk/ai-tool-sqlite": "workspace:*",
     "@isdk/ai-tool-download": "workspace:*",
+    "@isdk/ai-tool-sqlite": "workspace:*",
     "ai": "^3.0.13"
   },
   "devDependencies": {
@@ -39,6 +39,7 @@
     "eslint-plugin-tsdoc": "^0.2.17",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
+    "tsx": "^4.7.2",
     "typedoc": "^0.25.11",
     "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.4.2",
@@ -63,6 +64,5 @@
   "engines": {
     "node": ">=20.11.1"
   },
-  "packageManager": "pnpm@9.0.5",
   "types": "./dist/index.d.ts"
 }
