keep commonjs compatibility

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@isdk/ai-tool-llm",
-  "private": true,
   "version": "0.0.1",
   "author": "Riceball LEE <snowyu.lee@gmail.com>",
-  "type": "module",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "exports": {
+    ".": "./dist/index.mjs"
+  },
   "scripts": {
     "build-fast": "tsup",
     "build": "pnpm run build-fast --dts-resolve --dts && pnpm run doc:md",
@@ -24,8 +25,7 @@
   "dependencies": {
     "@isdk/ai-tool": "workspace:*",
     "@isdk/ai-tool-download": "workspace:*",
-    "@isdk/ai-tool-sqlite": "workspace:*",
-    "ai": "^3.0.13"
+    "@isdk/ai-tool-sqlite": "workspace:*"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.0",
