--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tsdoc": "^0.2.17",
+    "eventsource": "^2.0.2",
+    "fastify": "^4.26.2",
     "prettier": "^3.2.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.2",
