--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@isdk/ai-tool-download": "workspace:*",
     "@isdk/ai-tool-prompt": "workspace:*",
     "@isdk/ai-tool-sqlite": "workspace:*",
-    "radash": "^12.1.0"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.16.0",
     "@huggingface/hub": "^0.14.10",
     "@types/better-sqlite3": "^7.6.10",
     "@types/jest": "^29.5.12",
+    "@types/lodash-es": "^4.17.12",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "bumpp": "^9.4.1",
     "eslint": "^8.57.0",
