--- a/package.json
+++ b/package.json
@@ -37,28 +37,28 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.6.2",
+    "@antfu/eslint-config": "^4.10.1",
     "@huggingface/hub": "^0.15.2",
-    "@types/better-sqlite3": "^7.6.11",
-    "@types/jest": "^29.5.13",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/jest": "^29.5.14",
     "@types/lodash-es": "^4.17.12",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tsdoc": "^0.3.0",
-    "fastify": "^4.28.1",
-    "prettier": "^3.3.3",
-    "terser": "^5.32.0",
-    "tsup": "^8.2.4",
-    "tsx": "^4.19.1",
-    "typedoc": "^0.27.7",
-    "typedoc-plugin-markdown": "^4.4.2",
-    "typescript": "^5.7.3",
-    "vite": "^5.4.6",
-    "vite-plugin-wasm": "^3.3.0",
-    "vitest": "^2.1.1",
-    "vitest-fetch-mock": "^0.3.0",
-    "zod": "^3.23.8"
+    "@typescript-eslint/eslint-plugin": "~8.41.0",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-tsdoc": "^0.4.0",
+    "fastify": "^5.6.0",
+    "prettier": "^3.6.2",
+    "terser": "^5.44.0",
+    "tsup": "^8.5.0",
+    "tsx": "^4.20.5",
+    "typedoc": "^0.28.13",
+    "typedoc-plugin-markdown": "^4.8.1",
+    "typescript": "~5.7.3",
+    "vite": "^7.1.4",
+    "vite-plugin-wasm": "^3.5.0",
+    "vitest": "^3.2.4",
+    "vitest-fetch-mock": "^0.4.5",
+    "zod": "^3.24.2"
   },
   "files": [
     "docs",
